Se agrego un header

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" type="text/css" href="estilos.css">
 </head>
 <body>
+	<header>Hola</header>
 <div class="header">
 	<h1>Panaderia La Nueva</h1>
 </div>
