se agrego un canvas

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 	<h3>2114 Hansen Pines Rafaelaborough Arizona 81445</h3>
 	<h3>Telefono:2225-5566</h3>
 	<h3>Te esperamos!</h3>
+	<canvas></canvas>
 </div>
 </center>
 </body>
